--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   path_provider: ^2.0.5
   percent_indicator: ^3.4.0
   photo_view: ^0.13.0
+  popover: ^0.2.6+3
   provider: ^6.0.1
   record: ^3.0.0
   rxdart: ^0.27.2
