--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
     sdk: flutter
   flutter_rating_bar: ^4.0.0
   flutter_slidable: ^0.6.0
-  flutter_spinkit: ^5.0.0
+  flutter_spinkit: ^5.1.0
   flutter_svg: ^0.23.0+1
   flutter_vibrate: ^1.3.0
   get_it: ^7.1.4
@@ -54,6 +54,7 @@ dependencies:
   modal_bottom_sheet: ^2.0.0
   native_device_orientation: ^1.0.0
   normalize: ^0.5.5
+  package_info_plus: ^1.3.0
   path_drawing: ^0.5.1+1
   path_provider: ^2.0.5
   percent_indicator: ^3.4.0
