certification and skills wip

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -135,6 +135,7 @@ flutter:
     - assets/body_areas/back/selection/
     - assets/equipment_icons/
     - assets/flags/png/
+    - assets/graphics/
     - assets/category_icons/
     - assets/logos/
     - assets/other_app_icons/
