--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   collection: ^1.15.0
   cupertino_icons: ^1.0.3
   custom_pop_up_menu: ^1.2.0
+  dotted_line: ^3.1.0
   email_validator: ^2.0.1
   equatable: ^2.0.0
   file_picker: ^4.2.7
