--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   artemis: ^7.3.0-beta
   async: ^2.8.2
   auto_route: ^3.2.1
+  cached_network_image: ^3.2.0
   collection: ^1.15.0
   cupertino_icons: ^1.0.3
   custom_pop_up_menu: ^1.2.0
@@ -71,7 +72,7 @@ dependencies:
   sliding_up_panel: ^2.0.0+1
   stop_watch_timer: ^1.3.0 # Controller only - no UI. Provides streams and sinks.
   stream_chat_flutter: ^3.3.2
-  stream_feed: ^0.4.0+3
+  stream_feed: ^0.5.0
   substring_highlight: ^1.0.33
   supercharged: ^2.1.1
   syncfusion_flutter_charts: ^19.4.42
