--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,7 @@ dependencies:
   uploadcare_flutter: ^2.0.1
   uuid: ^3.0.5
   video_player: ^2.2.11
+  video_thumbnail: ^0.4.3
   wakelock: ^0.5.6
   xml: ^5.3.0
 
