--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,19 +12,19 @@ environment:
 dependencies:
   animations: ^2.0.2
   another_flushbar: ^1.10.28
-  artemis: ^7.3.0-beta
+  artemis: ^7.3.1-beta
   async: ^2.8.2
-  auto_route: ^3.2.1
+  auto_route: ^3.2.2
   cached_network_image: ^3.2.0
   collection: ^1.15.0
   cupertino_icons: ^1.0.3
-  custom_pop_up_menu: ^1.2.0
+  custom_pop_up_menu: ^1.2.3+1
   dotted_line: ^3.1.0
   email_validator: ^2.0.1
   equatable: ^2.0.0
-  file_picker: ^4.3.1
-  firebase_auth: ^3.3.5
-  firebase_core: ^1.11.0
+  file_picker: ^4.3.3
+  firebase_auth: ^3.3.6
+  firebase_core: ^1.12.0
   flutter:
     sdk: flutter
   flutter_localizations:
@@ -32,7 +32,7 @@ dependencies:
   flutter_rating_bar: ^4.0.0
   flutter_slidable: ^0.6.0
   flutter_spinkit: ^5.1.0
-  flutter_svg: ^1.0.1
+  flutter_svg: ^1.0.3
   flutter_vibrate: ^1.3.0
   get_it: ^7.1.4
   google_fonts: ^2.2.0
@@ -45,13 +45,14 @@ dependencies:
   hive_flutter: ^1.1.0
   http: ^0.13.3
   image_cropper: ^1.4.1
-  image_picker: ^0.8.4+2
+  image_picker: ^0.8.4+5
   implicitly_animated_reorderable_list: ^0.4.1
   infinite_scroll_pagination: ^3.0.1+1
   intl: ^0.17.0
   json_annotation: ^4.4.0
   just_audio: ^0.9.17
   logger: ^1.1.0
+  lottie: ^1.2.1
   meta: ^1.7.0
   modal_bottom_sheet: ^2.0.0
   native_device_orientation: ^1.0.0
@@ -59,7 +60,7 @@ dependencies:
   package_info_plus: ^1.3.0
   path_drawing: ^1.0.0
   path_provider: ^2.0.8
-  percent_indicator: ^3.4.0
+  percent_indicator: ^4.0.0
   photo_view: ^0.13.0
   popover: ^0.2.6+3
   provider: ^6.0.2
@@ -75,21 +76,21 @@ dependencies:
   stream_feed: ^0.5.0
   substring_highlight: ^1.0.33
   supercharged: ^2.1.1
-  syncfusion_flutter_charts: ^19.4.42
-  syncfusion_flutter_gauges: ^19.4.42
-  syncfusion_flutter_pdfviewer: ^19.4.42-beta
+  syncfusion_flutter_charts: ^19.4.48
+  syncfusion_flutter_gauges: ^19.4.48
+  syncfusion_flutter_pdfviewer: ^19.4.48-beta
   table_calendar: ^3.0.0
   timeline_tile: ^2.0.0
   uni_links: ^0.5.1
   uploadcare_flutter: ^2.0.1
   uuid: ^3.0.5
-  video_player: ^2.2.11
+  video_player: ^2.2.16
   video_thumbnail: ^0.4.3
   wakelock: ^0.5.6
   xml: ^5.3.0
 
 dependency_overrides:
-  flutter_svg: ^1.0.1
+  flutter_svg: ^1.0.3
   provider: ^6.0.2
 
 dev_dependencies:
@@ -98,7 +99,7 @@ dev_dependencies:
   flutter_app_name: ^0.1.0
   flutter_launcher_icons: ^0.9.2
   flutter_lints: ^1.0.4
-  flutter_native_splash: ^1.3.3
+  flutter_native_splash: ^2.0.1+1
   flutter_test:
     sdk: flutter
   hive_generator: ^1.1.2
@@ -138,11 +139,12 @@ flutter:
     - assets/body_areas/front/selection/
     - assets/body_areas/back/
     - assets/body_areas/back/selection/
+    - assets/category_icons/
     - assets/equipment_icons/
     - assets/flags/png/
     - assets/graphics/
-    - assets/category_icons/
     - assets/logos/
+    - assets/lottie/
     - assets/other_app_icons/
     - assets/placeholder_images/
     - assets/workout_filters_icons/
