--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   firebase_core: ^1.12.0
   flutter:
     sdk: flutter
+  flutter_emoji: ^2.4.0
   flutter_localizations:
     sdk: flutter
   flutter_rating_bar: ^4.0.0
