--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,6 @@ dependencies:
     sdk: flutter
   flutter_rating_bar: ^4.0.1
   flutter_slidable: ^1.2.1
-  flutter_spinkit: ^5.1.0
   flutter_svg: ^1.0.3
   flutter_vibrate: ^1.3.0
   get_it: ^7.2.0
@@ -58,6 +57,7 @@ dependencies:
   just_audio: ^0.9.21
   logger: ^1.1.0
   lottie: ^1.3.0
+  loading_animation_widget: ^1.2.0+1
   meta: ^1.7.0
   native_device_orientation: ^1.1.2
   normalize: ^0.6.0+1
@@ -109,23 +109,20 @@ dev_dependencies:
   hive_generator: ^1.1.3
   json_serializable: ^6.2.0
 
-flutter_app_name:
-  name: "Sofie"
-
 flutter_icons:
   # Android
   android: true
-  image_path_android: "assets/logos/sofie_launcher_icon_android.png"
+  image_path_android: "assets/logos/android_launcher_icon.png"
   adaptive_icon_background: "#000000"
-  adaptive_icon_foreground: "assets/logos/sofie_launcher_icon_android.png"
+  adaptive_icon_foreground: "assets/logos/android_launcher_icon.png"
   # ios
   ios: true
-  image_path_ios: "assets/logos/sofie_launcher_icon_ios.png"
+  image_path_ios: "assets/logos/ios_launcher_icon.png"
   remove_alpha_ios: true
 
 flutter_native_splash:
   color: "#000000"
-  image: "assets/logos/sofie_splash_image.png"
+  image: "assets/logos/android_launcher_icon.png"
   info_plist_files:
    - 'ios/Runner/Info-Debug.plist'
    - 'ios/Runner/Info-Release.plist'
