--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,10 +81,12 @@ dependencies:
   stream_feed: ^0.5.2
   substring_highlight: ^1.0.33
   supercharged: ^2.1.1
+  syncfusion_flutter_core: ^20.1.60 # Seem to need this to be able to import SfTheme
   syncfusion_flutter_charts: ^20.1.56
   syncfusion_flutter_gauges: ^20.1.56
   syncfusion_flutter_pdfviewer: ^20.1.56-beta
-  table_calendar: ^3.0.5
+  syncfusion_flutter_calendar: ^20.1.60
+  table_calendar: ^3.0.5 # Being used for DateTime pickers.
   timeline_tile: ^2.0.0
   uni_links: ^0.5.1
   uploadcare_flutter: ^3.0.1
